2005-06-14  Dan Winship  <danw@novell.com>

	* configure.in: check for gmtime_r

	* libsoup/soup-date.c: date/time-manipulation functions

	* libsoup/soup-xmlrpc-message.c: 
	* libsoup/soup-xmlrpc-response.c: XMLRPC message classes, from
	Mariano Suarez-Alvarez, Fernando Herrera, and Jeff Bailey.
	[#300227]

	* tests/date.c: soup-date test code

	* tests/getbug.c: XMLRPC test code. (Should be switched to use
	bugzilla.gnome.org once bgo supports XMLRPC.)

	* TODO: XMLRPC is implemented now (but shares the problem with
	SOAP that the API is not very good).

2005-06-14  Dan Winship  <danw@novell.com>

	* libsoup/*.[ch]: add/fix gtk-doc comments, make functions match
	prototypes, etc

	* docs/reference/*: update, fix, etc

2005-06-13  Tor Lillqvist  <tml@novell.com>

	* configure.in: Check also for inet_ntop(). Pre-cache knowledge
	that we do have inet_pton() and inet_ntop() on Windows (because we
	implement them ourselves in soup-dns.c).
	
	* libsoup/soup-dns.c (inet_pton, inet_ntop): Fix the Win32
	implementations, they were completely bogus.
	(soup_dns_ntop): Make it compile if HAVE_INET_NTOP.

2005-06-08  Dan Winship  <danw@novell.com>

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_pre): Fix this to
	use just the domain name for the domain, not the whole
	DOMAIN\username. Based on a patch by Jeroen Hautekeete in #306877.

2005-05-26  Dan Winship  <danw@novell.com>

	* libsoup/soup-session.c (cleanup_hosts): lock host_lock around
	this, since it can be called from set_property(). Possible fix for
	bnc #81641.

2005-05-05  Dan Winship  <danw@novell.com>

	* docs/reference/Makefile.am (SCANGOBJ_OPTIONS): Use
	--type-init-func to force g_thread_init to be called. [#302674]

2005-04-18  Tor Lillqvist  <tml@novell.com>

	* configure.in: Call AC_LIBTOOL_WIN32_DLL. Check for Win32, set
	Automake conditional OS_WIN32. Pre-cache information that we do
	have getaddrinfo(), getnameinfo(), and IPv6 on Win32. (The tests